<resources>
    <string name="app_name">订阅卫士</string>
</resources>
